--- a/BookListRazor/Pages/BookList/Index.cshtml
+++ b/BookListRazor/Pages/BookList/Index.cshtml
@@ -41,7 +41,7 @@
                     </td>
                     <td>
                         <button class="btn btn-danger btn-sm text-white">Delete</button>
-                        <a asp-page="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm text-white">Edit</a>
+                        <a class="btn btn-success btn-sm text-white">Edit</a>
                     </td>
                 </tr>
                     }
